Spring Boot 3.4 to 3.5 Spring Data JPA to Spring Data JDBC